cov/tests/test262/test/language/identifiers/vals-rus-alpha-upper-via-escape-hex4/code.js
"use strict";
// Copyright (C) 2017 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Collection of assertion functions used throughout test262
defines: [assert]
---*/


function assert(mustBeTrue, message) {
  if (mustBeTrue === true) {
    return;
  }

  if (message === undefined) {
    message = 'Expected true but got ' + assert._toString(mustBeTrue);
  }
  throw new Test262Error(message);
}

assert._isSameValue = function (a, b) {
  if (a === b) {
    // Handle +/-0 vs. -/+0
    return a !== 0 || 1 / a === 1 / b;
  }

  // Handle NaN vs. NaN
  return a !== a && b !== b;
};

assert.sameValue = function (actual, expected, message) {
  try {
    if (assert._isSameValue(actual, expected)) {
      return;
    }
  } catch (error) {
    throw new Test262Error(message + ' (_isSameValue operation threw) ' + error);
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(expected) + '») to be true';

  throw new Test262Error(message);
};

assert.notSameValue = function (actual, unexpected, message) {
  if (!assert._isSameValue(actual, unexpected)) {
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(unexpected) + '») to be false';

  throw new Test262Error(message);
};

assert.throws = function (expectedErrorConstructor, func, message) {
  var expectedName, actualName;
  if (typeof func !== "function") {
    throw new Test262Error('assert.throws requires two arguments: the error constructor ' +
      'and a function to run');
    return;
  }
  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  try {
    func();
  } catch (thrown) {
    if (typeof thrown !== 'object' || thrown === null) {
      message += 'Thrown value was not an object!';
      throw new Test262Error(message);
    } else if (thrown.constructor !== expectedErrorConstructor) {
      expectedName = expectedErrorConstructor.name;
      actualName = thrown.constructor.name;
      if (expectedName === actualName) {
        message += 'Expected a ' + expectedName + ' but got a different error constructor with the same name';
      } else {
        message += 'Expected a ' + expectedName + ' but got a ' + actualName;
      }
      throw new Test262Error(message);
    }
    return;
  }

  message += 'Expected a ' + expectedErrorConstructor.name + ' to be thrown but no exception was thrown at all';
  throw new Test262Error(message);
};

assert._toString = function (value) {
  try {
    if (value === 0 && 1 / value === -Infinity) {
      return '-0';
    }

    return String(value);
  } catch (err) {
    if (err.name === 'TypeError') {
      return Object.prototype.toString.call(value);
    }

    throw err;
  }
};

// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Provides both:

    - An error class to avoid false positives when testing for thrown exceptions
    - A function to explicitly throw an exception using the Test262Error class
defines: [Test262Error, $DONOTEVALUATE]
---*/


function Test262Error(message) {
  this.message = message || "";
}

Test262Error.prototype.toString = function () {
  return "Test262Error: " + this.message;
};

Test262Error.thrower = (message) => {
  throw new Test262Error(message);
};

function $DONOTEVALUATE() {
  throw "Test262: This statement should not be evaluated.";
}

// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: Correct interpretation of RUSSIAN ALPHABET
es5id: 7.6_A4.2_T1
description: Check RUSSIAN CAPITAL ALPHABET
---*/

var \u0410 = 1;
assert.sameValue(А, 1);

var \u0411 = 1;
assert.sameValue(Б, 1);

var \u0412 = 1;
assert.sameValue(В, 1);

var \u0413 = 1;
assert.sameValue(Г, 1);

var \u0414 = 1;
assert.sameValue(Д, 1);

var \u0415 = 1;
assert.sameValue(Е, 1);

var \u0416 = 1;
assert.sameValue(Ж, 1);

var \u0417 = 1;
assert.sameValue(З, 1);

var \u0418 = 1;
assert.sameValue(И, 1);

var \u0419 = 1;
assert.sameValue(Й, 1);

var \u041A = 1;
assert.sameValue(К, 1);

var \u041B = 1;
assert.sameValue(Л, 1);

var \u041C = 1;
assert.sameValue(М, 1);

var \u041D = 1;
assert.sameValue(Н, 1);

var \u041E = 1;
assert.sameValue(О, 1);

var \u041F = 1;
assert.sameValue(П, 1);

var \u0420 = 1;
assert.sameValue(Р, 1);

var \u0421 = 1;
assert.sameValue(С, 1);

var \u0422 = 1;
assert.sameValue(Т, 1);

var \u0423 = 1;
assert.sameValue(У, 1);

var \u0424 = 1;
assert.sameValue(Ф, 1);

var \u0425 = 1;
assert.sameValue(Х, 1);

var \u0426 = 1;
assert.sameValue(Ц, 1);

var \u0427 = 1;
assert.sameValue(Ч, 1);

var \u0428 = 1;
assert.sameValue(Ш, 1);

var \u0429 = 1;
assert.sameValue(Щ, 1);

var \u042A = 1;
assert.sameValue(Ъ, 1);

var \u042B = 1;
assert.sameValue(Ы, 1);

var \u042C = 1;
assert.sameValue(Ь, 1);

var \u042D = 1;
assert.sameValue(Э, 1);

var \u042E = 1;
assert.sameValue(Ю, 1);

var \u042F = 1;
assert.sameValue(Я, 1);

var \u0401 = 1;
assert.sameValue(Ё, 1);

